Fix for overlap of spreadhseet and controls

--- a/css/common.css
+++ b/css/common.css
@@ -248,7 +248,7 @@ div.welcome-container{
 		margin:0px;
 	}
 	section.datadriven-wrap .spreadsheet{
-		margin-top: 30px;
+		margin-top: 50px;
 		overflow: auto;
 		max-height: 368px;
 
